@@ -1,5 +1,7 @@
 2014-02-26  gepr  <gepr@tempusdictum.com>
 
+	* isl.html: Added the desc. of the ISL and the associated images.
+
 	* projects.html: Change title.  Fix ACIMS link.
 
 	* is-hic.html, images/ishic: Add IS-HIC. Add images for IS-HIC.
